[gd_scene load_steps=2 format=3 uid="uid://celv2gypi3neg"]

[ext_resource type="Script" uid="uid://cwjxyelyrvlwu" path="res://Scripts/Menu/main_menu.gd" id="1_bkwd7"]

[node name="MainMenu" type="CanvasLayer"]
script = ExtResource("1_bkwd7")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 1280.0
offset_bottom = 720.0
size_flags_horizontal = 3

[node name="MenuCont" type="MarginContainer" parent="Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 30
theme_override_constants/margin_top = 30
theme_override_constants/margin_right = 30
theme_override_constants/margin_bottom = 30

[node name="VBoxContainer" type="VBoxContainer" parent="Control/MenuCont"]
layout_mode = 2

[node name="VBoxContainer2" type="VBoxContainer" parent="Control/MenuCont/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
alignment = 1

[node name="Label" type="Label" parent="Control/MenuCont/VBoxContainer/VBoxContainer2"]
layout_mode = 2
theme_override_font_sizes/font_size = 72
text = "Game name"
horizontal_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="Control/MenuCont/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="HBoxContainer" type="HBoxContainer" parent="Control/MenuCont/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="FunctionalButtons" type="VBoxContainer" parent="Control/MenuCont/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
alignment = 2

[node name="Play" type="VBoxContainer" parent="Control/MenuCont/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
alignment = 2

[node name="Play" type="Button" parent="Control/MenuCont/VBoxContainer/HBoxContainer/Play"]
layout_mode = 2
size_flags_vertical = 3
theme_override_font_sizes/font_size = 52
text = "Play"

[node name="Option" type="Button" parent="Control/MenuCont/VBoxContainer/HBoxContainer/Play"]
layout_mode = 2
size_flags_vertical = 3
theme_override_font_sizes/font_size = 52
text = "Options
"

[node name="Credits" type="Button" parent="Control/MenuCont/VBoxContainer/HBoxContainer/Play"]
layout_mode = 2
size_flags_vertical = 3
theme_override_font_sizes/font_size = 52
text = "Credits
"

[node name="Quit" type="Button" parent="Control/MenuCont/VBoxContainer/HBoxContainer/Play"]
layout_mode = 2
size_flags_vertical = 3
theme_override_font_sizes/font_size = 52
text = "Quit"

[node name="Other" type="VBoxContainer" parent="Control/MenuCont/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="SettingsCont" type="MarginContainer" parent="Control"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 30
theme_override_constants/margin_top = 30
theme_override_constants/margin_right = 30
theme_override_constants/margin_bottom = 30

[node name="CreditsCont" type="MarginContainer" parent="Control"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 30
theme_override_constants/margin_top = 30
theme_override_constants/margin_right = 30
theme_override_constants/margin_bottom = 30

[node name="BackButton" type="MarginContainer" parent="Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 30
theme_override_constants/margin_top = 30
theme_override_constants/margin_right = 30
theme_override_constants/margin_bottom = 30

[node name="Control" type="Control" parent="Control/BackButton"]
layout_mode = 2

[node name="Back" type="Button" parent="Control/BackButton/Control"]
unique_name_in_owner = true
layout_mode = 0
offset_right = 8.0
offset_bottom = 8.0
theme_override_font_sizes/font_size = 52
text = "BACK"
